[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptools-util"
version = "0.1.2"
description = "Utility functions for Gaussian processes on graphs and lattices in Stan."
readme = {text = "Utility functions for Gaussian processes on graphs and lattices in Stan.", content-type = "text/markdown"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.setuptools]
packages = {find = {namespaces = true}}
